fixes(home_projects) remove project heading on mobile

--- a/resources/sass/layout.scss
+++ b/resources/sass/layout.scss
@@ -5,6 +5,14 @@
     width: 100%;
 }
 
+.layout__projects-section {
+    @include mobile() {
+        .heading-lead {
+            display: none;
+        }
+    }
+}
+
 .layout {
     position: relative;
 
